--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,10 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/container"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
     <Button
+        android:id="@+id/host"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.47"
@@ -15,29 +17,11 @@
         />
 
     <Button
+        android:id="@+id/join"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.47"
         android:text="Join a Game"
         />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.06"
-        android:orientation="horizontal">
-
-        <EditText
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.8"
-            android:hint="Game Code"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.2"
-            android:text="Join"
-            android:visibility="gone"/>
-
-    </LinearLayout>
 </LinearLayout>
