--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,36 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingVertical="50dp"
     tools:context=".MainActivity">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/bitmoji"/>
+        android:id="@+id/bitmoji"
+        android:layout_width="554dp"
+        android:layout_height="247dp"
+        android:layout_gravity="center"
+        android:src="@mipmap/guesswho" />
 
     <TextView
         android:id="@+id/helloworld"
         android:layout_width="wrap_content"
+        android:layout_gravity="center"
         android:layout_height="wrap_content"
-        android:text="Hello"/>
+        android:textSize="50dp"
+        android:text="@+string/app_name"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="The SnapKit Powered Game"/>
 
     <Button
         android:id="@+id/login"
+        android:layout_marginTop="50dp"
+        android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimary"
         android:text="Login"/>
 
 </LinearLayout>
