--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorPrimary">#FDFB01</color>
+    <color name="colorPrimaryDark">#000000</color>
+    <color name="colorAccent">#1B80D8</color>
+    <color name="colorAccent2">#E91E63</color>
 </resources>
