--- a/app/src/main/res/layout/activity_game_screen.xml
+++ b/app/src/main/res/layout/activity_game_screen.xml
@@ -13,7 +13,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:orientation="horizontal"
         >
 
@@ -53,7 +53,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:orientation="horizontal"
         >
 
@@ -93,7 +93,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:orientation="horizontal"
         >
 
@@ -133,7 +133,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="75dp"
         android:orientation="horizontal"
         >
 
@@ -197,10 +197,10 @@
     <!--</LinearLayout>-->
 
     <TextView
-        android:id="@+id/messages"
-        android:paddingVertical="10dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:id="@+id/messages_view"
+        android:layout_height="150dp"
+        android:onClick="sendMessage"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -216,6 +216,7 @@
             android:hint="Enter your question"/>
 
         <Button
+            android:id="@+id/send"
             android:layout_width="0dp"
             android:layout_weight="0.2"
             android:layout_height="wrap_content"
