--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FDFB01</color>
+    <color name="colorPrimary">#BBBA0A</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#1B80D8</color>
     <color name="colorAccent2">#E91E63</color>
